// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu /> with border to right matches with snapshot 1`] = `
.c1 {
  display: block;
  padding: 0.9375rem 1.25rem;
  border-left: 1px solid #eee;
  background-color: #fbfbfb;
  font-family: "Maax",Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222;
  outline: none;
  -webkit-transition: color .2s,background-color .2s,border-color .2s;
  transition: color .2s,background-color .2s,border-color .2s;
  border-right: 1px solid #eee;
  border-left: 0;
}

.c1:hover {
  background-color: #eee;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  background-color: #eee;
  border-left-color: #19b4fa;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
}

<nav
  role="navigation"
>
  <ul
    className="c0"
    role="menubar"
  >
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 1
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 2
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 3
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderMenu /> with one custom item matches with snapshot 1`] = `
.c1 {
  display: block;
  padding: 0.9375rem 1.25rem;
  border-left: 1px solid #eee;
  background-color: #fbfbfb;
  font-family: "Maax",Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222;
  outline: none;
  -webkit-transition: color .2s,background-color .2s,border-color .2s;
  transition: color .2s,background-color .2s,border-color .2s;
}

.c1:hover {
  background-color: #eee;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  background-color: #eee;
  border-left-color: #19b4fa;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
}

<nav
  role="navigation"
>
  <ul
    className="c0"
    role="menubar"
  >
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 1
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 2
      </a>
    </li>
    <li
      role="menuitem"
    >
      <div
        className="c1"
        href={null}
      >
        <a
          href="#custom-component"
        >
          Custom component
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderMenu /> with one selected item matches with snapshot 1`] = `
.c1 {
  display: block;
  padding: 0.9375rem 1.25rem;
  border-left: 1px solid #eee;
  background-color: #fbfbfb;
  font-family: "Maax",Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222;
  outline: none;
  -webkit-transition: color .2s,background-color .2s,border-color .2s;
  transition: color .2s,background-color .2s,border-color .2s;
}

.c1:hover {
  background-color: #eee;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  background-color: #eee;
  border-left-color: #19b4fa;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: block;
  padding: 0.9375rem 1.25rem;
  border-left: 1px solid #eee;
  background-color: #fbfbfb;
  font-family: "Maax",Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222;
  outline: none;
  -webkit-transition: color .2s,background-color .2s,border-color .2s;
  transition: color .2s,background-color .2s,border-color .2s;
  border-left-color: #19b4fa;
  color: #19b4fa;
}

.c2:hover {
  background-color: #eee;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:focus {
  background-color: #eee;
  border-left-color: #19b4fa;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
}

<nav
  role="navigation"
>
  <ul
    className="c0"
    role="menubar"
  >
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 1
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c2"
        href="#"
      >
        Item 2
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 3
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<HeaderMenu /> with three items matches with snapshot 1`] = `
.c1 {
  display: block;
  padding: 0.9375rem 1.25rem;
  border-left: 1px solid #eee;
  background-color: #fbfbfb;
  font-family: "Maax",Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222;
  outline: none;
  -webkit-transition: color .2s,background-color .2s,border-color .2s;
  transition: color .2s,background-color .2s,border-color .2s;
}

.c1:hover {
  background-color: #eee;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  background-color: #eee;
  border-left-color: #19b4fa;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  display: block;
  padding: 0.9375rem 1.25rem;
  border-left: 1px solid #eee;
  background-color: #fbfbfb;
  font-family: "Maax",Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222;
  outline: none;
  -webkit-transition: color .2s,background-color .2s,border-color .2s;
  transition: color .2s,background-color .2s,border-color .2s;
  color: #b8b8b8;
}

.c2:hover {
  background-color: #eee;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:focus {
  background-color: #eee;
  border-left-color: #19b4fa;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: block;
  padding: 0.9375rem 1.25rem;
  border-left: 1px solid #eee;
  background-color: #fbfbfb;
  font-family: "Maax",Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #222;
  outline: none;
  -webkit-transition: color .2s,background-color .2s,border-color .2s;
  transition: color .2s,background-color .2s,border-color .2s;
  border-top: 1px solid #eee;
}

.c3:hover {
  background-color: #eee;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  background-color: #eee;
  border-left-color: #19b4fa;
  color: #19b4fa;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
}

<nav
  role="navigation"
>
  <ul
    className="c0"
    role="menubar"
  >
    <li
      role="menuitem"
    >
      <a
        className="c1"
        href="#"
      >
        Item 1
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c2"
        href="#"
      >
        Item 2
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        className="c3"
        href="#"
      >
        Item 3
      </a>
    </li>
  </ul>
</nav>
`;
